# RK3588

./: .gitignore  README.md
CPP/: CMakeLists.txt
CPP/build-clang/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
CPP/build-mingw/: CMakeCache.txt
CPP/src/: main.cpp
assets/: README.md
docs/: cpp_upgrade_roadmap.md
scripts/: avatar_processor.py  avatarctl.sh  install_avatar_gateway.sh  run_avatar_gateway.sh  run_avatar_gateway_windows.ps1  setup_uvc_gadget.sh
systemd/: avatar-gateway.service  uvc-gadget-setup.service
tmp-gpp-test/: test.cpp
